[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/save_load.gd" type="Script" id=1]

[node name="Save & Load" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 32.0
script = ExtResource( 1 )

[node name="buttons" type="VBoxContainer" parent="."]
margin_left = 31.0
margin_top = 81.0
margin_right = 255.0
margin_bottom = 371.0
custom_constants/separation = 40

[node name="Label" type="Label" parent="buttons"]
margin_right = 224.0
margin_bottom = 14.0
text = "Save and Load"

[node name="new_game" type="Button" parent="buttons"]
margin_top = 54.0
margin_right = 224.0
margin_bottom = 74.0
text = "New Game"

[node name="new_game" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.5
margin_top = -82.5
margin_right = 175.5
margin_bottom = 82.5
rect_min_size = Vector2( 150, 52.5 )
window_title = "Start New Game"
dialog_text = "This will delete your save file forever.
Are you sure you want to proceed?"

[connection signal="pressed" from="buttons/new_game" to="." method="_on_new_game_pressed"]
[connection signal="confirmed" from="new_game" to="." method="_on_new_game_confirmed"]
